--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Damaris
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Comentarios de las clases 6, 8 y 9 del curso Sistemas Recomendadores del Magíster de Inteligencia Artificial
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
